# algorist

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: bot.py  discord.py  faction.py  processor.py  run.py  sandbox.py  torn.py  user.py
src/algorist/: __init__.py  bot.py  faction.py  processor.py  run.py  sandbox.py  user.py
src/algorist/bot/: inbox.py  service.py
src/algorist/content/: config.py  inbox.py  service.py
src/algorist/content/faction/: database.py  faction.py
src/algorist/content/user/: database.py  hof.py  user.py
src/algorist/processor/: config.py  inbox.py  service.py
src/algorist/sandbox/: client.py  config.py  context.py  inbox.py  sandbox.py  service.py
