[tool.poetry]
name = "algorist"
version = "0.1.0"
description = ""
authors = ["Paige Thompson <paige@paige.bio>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
discord-py = "^2.4.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
asyncio = "^3.4.3"
aiohttp = "^3.10.10"
tinydb = "^4.8.2"
pbkdf2 = "^1.3"
aiozmq = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
